[project]
name = "image_process_test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tianran Zhang", email = "tianran.zh@gmail.com"},
]
dependencies = [
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "rasterio>=1.3.10",
    "opencv-python>=4.10.0.84",
    "ipykernel>=6.29.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
